--- a/Templates/order.html
+++ b/Templates/order.html
@@ -4,129 +4,8 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
-<!DOCTYPE html>
-<html>
-<head>
-<title>RECEIPES Bootstarp responsive Website Template| order page :: w3layouts</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<!-- Custom Theme files -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--webfont-->
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-<!--Animation-->
-<script src="js/wow.min.js"></script>
-<link href="css/animate.css" rel='stylesheet' type='text/css' />
-<script>
-	new WOW().init();
-</script>
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
-<script type="text/javascript">
-			jQuery(document).ready(function($) {
-				$(".scroll").click(function(event){		
-					event.preventDefault();
-					$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
-				});
-			});
-		</script>
-<script src="js/jquery.carouFredSel-6.1.0-packed.js"></script>
-<script src="js/tms-0.4.1.js"></script>
-<script>
- $(window).load(function(){
-      $('.slider')._TMS({
-              show:0,
-              pauseOnHover:false,
-              prevBu:'.prev',
-              nextBu:'.next',
-              playBu:false,
-              duration:800,
-              preset:'fade', 
-              pagination:true,//'.pagination',true,'<ul></ul>'
-              pagNums:false,
-              slideshow:8000,
-              numStatus:false,
-              banners:false,
-          waitBannerAnimation:false,
-        progressBar:false
-      })  
-      });
-      
-     $(window).load (
-    function(){$('.carousel1').carouFredSel({auto: false,prev: '.prev',next: '.next', width: 960, items: {
-      visible : {min: 1,
-       max: 4
-},
-height: 'auto',
- width: 240,
-
-    }, responsive: false, 
-    
-    scroll: 1, 
-    
-    mousewheel: false,
-    
-    swipe: {onMouse: false, onTouch: false}});
-    
-    
-    });      
-
-     </script>
-<script src="js/jquery.easydropdown.js"></script>
-<script src="js/simpleCart.min.js"> </script>	
-</head>
-<body>
-    <!-- header-section-starts -->
-	<div class="header">
-		<div class="container">
-			<div class="top-header">
-				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" class="img-responsive" alt="" /></a>
-				</div>
-				<div class="queries">
-					<p>Questions? Call us Toll-free!<span>1800-0000-7777 </span><label>(11AM to 11PM)</label></p>
-				</div>
-				<div class="header-right">
-						<div class="cart box_1">
-							<a href="checkout.html">
-								<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span> items)<img src="images/bag.png" alt=""></h3>
-							</a>	
-							<p><a href="javascript:;" class="simpleCart_empty">Empty card</a></p>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-			<div class="menu-bar">
-			<div class="container">
-				<div class="top-menu">
-					<ul>
-						<li><a href="index.html">Home</a></li>|
-						<li><a href="popular-restaurents.html">Popular Restaurants</a></li>|
-						<li class="active"><a href="order.html">Order</a></li>|
-						<li><a href="contact.html">contact</a></li>
-						<div class="clearfix"></div>
-					</ul>
-				</div>
-				<div class="login-section">
-					<ul>
-						<li><a href="login.html">Login</a>  </li> |
-						<li><a href="register.html">Register</a> </li> |
-						<li><a href="#">Help</a></li>
-						<div class="clearfix"></div>
-					</ul>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-		</div>
-	<!-- header-section-ends -->
+{% load staticfiles %}
+{% include 'header.html' %}
 	<div class="order-section-page">
 		<div class="ordering-form">
 			<div class="container">
@@ -176,112 +55,10 @@ height: 'auto',
 					</div>
 				</div>
 				<div class="col-md-6 ordering-image wow bounceIn" data-wow-delay="0.4s">
-					<img src="images/order.jpg" class="img-responsive" alt="" />
+					<img src="/static/images/order.jpg" class="img-responsive" alt="" />
 				</div>
 			</div>
 		</div>
-<div class="special-offers-section">
-			<div class="container">
-				<div class="special-offers-section-head text-center dotted-line">
-					<h4>Special Offers</h4>
-				</div>
-				<div class="special-offers-section-grids">
-				 <div class="m_3"><span class="middle-dotted-line"> </span> </div>
-				   <div class="container">
-					  <ul id="flexiselDemo3">
-						<li>
-							<div class="offer">
-								<div class="offer-image">	
-									<img src="images/p1.jpg" class="img-responsive" alt=""/>
-								</div>
-								<div class="offer-text">
-									<h4>Olister Combo pack lorem</h4>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-									<input type="button" value="Grab It">
-									<span></span>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</li>
-						<li>
-							<div class="offer">
-								<div class="offer-image">	
-									<img src="images/p2.jpg" class="img-responsive" alt=""/>
-								</div>
-								<div class="offer-text">
-									<h4>Chicken Jumbo pack lorem</h4>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-									<input type="button" value="Grab It">
-									<span></span>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</li>
-						<li>
-							<div class="offer">
-								<div class="offer-image">	
-									<img src="images/p3.jpg" class="img-responsive" alt=""/>
-								</div>
-								<div class="offer-text">
-									<h4>Crab Combo pack lorem</h4>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-									<input type="button" value="Grab It">
-									<span></span>
-								</div>
-								
-								<div class="clearfix"></div>
-								</div>
-						</li>
-						<li>
-							<div class="offer">
-								<div class="offer-image">	
-									<img src="images/p2.jpg" class="img-responsive" alt=""/>
-								</div>
-								<div class="offer-text">
-									<h4>Chicken Jumbo pack lorem</h4>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-									<input type="button" value="Grab It">
-									<span></span>
-								</div>
-								
-								<div class="clearfix"></div>
-								</div>
-					    </li>
-					 </ul>
-				 <script type="text/javascript">
-					$(window).load(function() {
-						
-						$("#flexiselDemo3").flexisel({
-							visibleItems: 3,
-							animationSpeed: 1000,
-							autoPlay: true,
-							autoPlaySpeed: 3000,    		
-							pauseOnHover: true,
-							enableResponsiveBreakpoints: true,
-							responsiveBreakpoints: { 
-								portrait: { 
-									changePoint:480,
-									visibleItems: 1
-								}, 
-								landscape: { 
-									changePoint:640,
-									visibleItems: 2
-								},
-								tablet: { 
-									changePoint:768,
-									visibleItems: 3
-								}
-							}
-						});
-						
-					});
-				    </script>
-				    <script type="text/javascript" src="js/jquery.flexisel.js"></script>
-				</div>
-			</div>
-		</div>
-		</div>
-	</div>
 	<!-- footer-section-starts -->
 	<div class="footer">
 		<div class="container">
