--- a/static/css/style.css
+++ b/static/css/style.css
@@ -464,6 +464,8 @@ a.simpleCart_empty {
 	cursor:pointer;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
+	width: 100%;
+    text-align: center;
 }
 .nth-grid{
 	margin-right:0;
