User side max done

--- a/Templates/header.html
+++ b/Templates/header.html
@@ -59,7 +59,7 @@
 				<div class="top-menu">
 					<ul>
 						<li><a href="/">Home</a></li>|
-						<li><a href="/restaurants/">Restaurants</a></li>|
+						<li><a href="/search/">Search</a></li>|
 						<li><a href="/profile/">My Profile</a></li>
 						<div class="clearfix"></div>
 					</ul>
