--- a/Templates/popular-Restaurents.html
+++ b/Templates/popular-Restaurents.html
@@ -18,6 +18,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  	</ul>
 	</form>
 </div>
+{% if placed %}
+<div class="alert alert-success" style="margin:0px;">Placed Successfully..</div>
+{% endif %}
 {% for rest in rests %}
 	<div class="Popular-Restaurants-content" style="padding-bottom: 0;">
 		<div class="Popular-Restaurants-grids">
