--- a/Templates/header.html
+++ b/Templates/header.html
@@ -37,7 +37,7 @@
 		<div class="container">
 			<div class="top-header">
 				<div class="logo">
-					<a href="/"><img src="/static/images/logo.png" class="img-responsive" alt="" /></a>
+					<a href="/"><img src="/static/images/logo.png" class="img-responsive" style="height: 50px;" alt="Home" /></a>
 				</div>
 				<div class="queries">
 					<p>Questions? Call us Toll-free!<span>1800-0000-0000 </span><label>(11AM to 11PM)</label></p>
