Suggestions feature added

--- a/Templates/footer.html
+++ b/Templates/footer.html
@@ -2,7 +2,8 @@
 	<!-- footer-section-starts -->
 	<div class="footer">
 		<div class="container">
-			<p class="wow fadeInLeft" data-wow-delay="0.4s">&copy; 2014  All rights  Reserved | Template by &nbsp;<a href="http://w3layouts.com" target="target_blank">W3Layouts</a></p>
+			<p class="wow fadeInLeft" data-wow-delay="0.4s">DBMS Lab Assignment</p>
+			<!--<p class="wow fadeInLeft" data-wow-delay="0.4s">&copy; 2014  All rights  Reserved | Template by &nbsp;<a href="http://w3layouts.com" target="target_blank">W3Layouts</a></p>-->
 		</div>
 	</div>
 	<!-- footer-section-ends -->
