--- a/Templates/edit.html
+++ b/Templates/edit.html
@@ -1,41 +1,222 @@
 
 {% load staticfiles %}
 {% include 'header.html' %}
+<style>
+      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
+      @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
+*, *:before, *:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-<div class="order-top" style="border:0">
-			<li class="item-lists" style="width:100%"><h4>Items</h4>
+html, body {
+  height: 100%;
+}
+
+body {
+  font: 14px/1 'Open Sans', sans-serif;
+  color: #555;
+  background: #eee;
+}
+
+h1 {
+  padding: 50px 0;
+  font-weight: 400;
+  text-align: center;
+}
+
+p {
+  margin: 0 0 20px;
+  line-height: 1.5;
+}
+
+main {
+  min-width: 320px;
+  max-width: 800px;
+  padding: 50px;
+  margin: 0 auto;
+  background: #fff;
+}
+
+section {
+  display: none;
+  padding: 20px 0 0;
+  border-top: 1px solid #ddd;
+}
+
+input[type="radio"]{
+  display: none;
+}
+
+label {
+  display: inline-block;
+  margin: 0 0 -1px;
+  padding: 15px 25px;
+  font-weight: 600;
+  text-align: center;
+  color: #bbb;
+  border: 1px solid transparent;
+}
+
+label:before {
+  font-family: fontawesome;
+  font-weight: normal;
+  margin-right: 10px;
+}
+
+label[for*='1']:before {
+  content: '\f1cb';
+}
+
+label[for*='2']:before {
+  content: '\f17d';
+}
+
+label[for*='3']:before {
+  content: '\f16b';
+}
+
+label[for*='4']:before {
+  content: '\f1a9';
+}
+
+label:hover {
+  color: #888;
+  cursor: pointer;
+}
+
+input:checked + label {
+  color: #555;
+  border: 1px solid #ddd;
+  border-top: 2px solid orange;
+  border-bottom: 1px solid #fff;
+}
+
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4 {
+  display: block;
+}
+
+@media screen and (max-width: 650px) {
+  label {
+    font-size: 0;
+  }
+
+  label:before {
+    margin: 0;
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 400px) {
+  label {
+    padding: 15px;
+  }
+}
+
+    </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+<main>
+	<input id="tab1" type="radio" name="tabs" checked>
+  	<label for="tab1">Modify Menu</label>
+
+  	<input id="tab2" type="radio" name="tabs">
+  	<label for="tab2">Add Items</label>
+
+	<input id="tab3" type="radio" name="tabs">
+  	<label for="tab3">Delete Items</label>
+
+	<section id="content1">
+		<div class="order-top" style="border:0">
+			<p>
+				<h4>Items</h4>
 				<table class="table table-hover table-bordered">
 					<thead>
 						<th>Item</th>
 						<th>Price</th>
 						<th>Quantity</th>
+						<th></th>
 					</thead>
-				{% for x in items %}
+				{% for x in menu %}
 					<tr>
-					<td><input type="text" value="{{x.0}}" name="price"/></td>
-					<td><input type="text" value="{{x.1}}" name="price"/></td>
-					<td><input type="text" value="{{x.2}}" name="price"/></td>
-					{% if x.4 == "Open" %}
-					{% if x.3 != 0 %}
-					<td>
-						<span style="border:2px ;padding-left: 10px;padding-right: 10px; cursor:pointer;display:inline-block" onclick="if(document.querySelector('#itemno{{x.5}}').innerHTML>0){document.querySelector('#itemno{{x.5}}').innerHTML--;minuscounter({{x.5}});}">-</span>
-						<span id='itemno{{x.5}}'> 0 </span>
-						<span style="border:2px ;border-radius:5px; cursor:pointer;padding-left: 10px;padding-right: 10px; display:inline-block;display:inline-block" onclick="if(document.querySelector('#itemno{{x.5}}').innerHTML<{{x.3}}){document.querySelector('#itemno{{x.5}}').innerHTML++;pluscounter({{x.5}});}">+</span>
-					</td>
-					{% else %}
-					<td>
-						NA
-					</td>
-					{% endif %}
-					{% else %}
-					<td>
-						Closed
-					</td>
-					{% endif %}
+						<form action="" method="POST">{% csrf_token %}
+							<td>{{x.0}}</td>
+							<td><input type="number" value="{{x.1}}" name="price"/></td>
+							<td><input type="number" value="{{x.2}}" name="quantity"/></td>
+							<td>
+								<input type="hidden" value="{{x.3}}" name="menuid">
+								<input type="submit" value="Modify" name="submit"/>
+							</td>
+						</form>
 					</tr>
 				{% endfor %}
 				</table>
-			</li>
+			</p>
 		</div>
+	</section>
+	<section id="content2">
+		<div class="order-top" style="border:0">
+			<p>
+				<h4>Add Item</h4>
+				<table class="table table-hover table-bordered">
+					<thead>
+						<th>Item</th>
+						<th>Price</th>
+						<th>Quantity</th>
+						<th></th>
+					</thead>
+					<tr>
+						<form action="" method="POST">{% csrf_token %}
+						<td>
+							<select name="item">
+							{% for x in items %}
+								<option value="{{x.0}}">{{x.1}}</option>
+							{% endfor %}
+							</select>
+						</td>
+						<td><input type="number" value="" name="price"/></td>
+						<td><input type="number" value="" name="quantity"/>
+						</td>
+						<td>
+							<input type="submit" value="Add" name="submit">
+						</td>
+						</form>
+					</tr>
+				</table>
+			</p>
+		</div>
+	</section>
+	<section id="content3">
+		<div class="order-top" style="border:0">
+			<p>
+				<h4>Delete Item</h4>
+				<table class="table table-hover table-bordered">
+					<thead>
+						<th>Item</th>
+						<th>Price</th>
+						<th>Quantity</th>
+						<th></th>
+					</thead>
+				{% for x in menu %}
+					<tr>
+					<td>{{x.0}}</td>
+					<td>{{x.1}}</td>
+					<td>{{x.2}}</td>
+					<td>
+						<form action="" method="POST">{% csrf_token %}
+							<input type="hidden" value="{{x.3}}" name="menuid">
+							<input type="submit" value="Delete" name="submit">
+						</form>
+					</td>
+					</tr>
+				{% endfor %}
+				</table>
+			</p>
+		</div>
+	</section>
+</main>
 
 {% include 'footer.html' %}
