--- a/Templates/items-list.html
+++ b/Templates/items-list.html
@@ -55,14 +55,14 @@
 	var cart = [];
 	function pluscounter(pk){
 		cart.push(pk);
-		//console.log(cart);
+		console.log(cart);
 	};
 	function minuscounter(pk){
 		if (cart!=[]){
 			var removeindex = cart.indexOf(pk);
 			cart.splice(removeindex, 1);
 			}
-			//console.log(cart);
+			console.log(cart);
 	};
 
 	function storearray(){
